@@ -71,8 +71,6 @@ atcmdInit (void)
 #define LIT_(s) #s
 #define LIT(s) LIT_(s)
 
-#define PORT_DELIMITER " "
-
 /* D */
 /* dial command */
 void
